deployment/deployment-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: safeer932/backend:latest
          ports:
            - containerPort: 3001
          resources:
            requests:
              cpu: "250m"  # Minimum CPU requis
              memory: "256Mi"  # Minimum RAM requis
            limits:
              cpu: "500m"  # Maximum CPU autorisé
              memory: "512Mi"  # Maximum RAM autorisée
          livenessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 3
      restartPolicy: Always
